tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/string-lf.stderr
TOML parse error at line 1, column 20
  |
1 | string-lf   = "null"
  |                    ^
invalid basic string
